// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`taskLog (isCI = false) > error > clears output if showLog = false 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  some error!
",
]
`;

exports[`taskLog (isCI = false) > error > renders output with message 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  some error!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > group > applies limit per group 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 2</bold>
<dim>│</fg>  <dim>Group 0 line 3</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 2</bold>
<dim>│</fg>  <dim>Group 0 line 3</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 3</bold>
<dim>│</fg>  <dim>Group 0 line 4</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 3</bold>
<dim>│</fg>  <dim>Group 0 line 4</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
]
`;

exports[`taskLog (isCI = false) > group > can render multiple groups of different sizes 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
]
`;

exports[`taskLog (isCI = false) > group > can render multiple groups of equal size 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
<dim>│</fg>  <dim>Group 0 line 3</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
<dim>│</fg>  <dim>Group 0 line 3</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
<dim>│</fg>  <dim>Group 0 line 3</bold>
<dim>│</fg>  <dim>Group 0 line 4</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
<dim>│</fg>  <dim>Group 0 line 3</bold>
<dim>│</fg>  <dim>Group 0 line 4</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
]
`;

exports[`taskLog (isCI = false) > group > handles empty groups 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<green>◆</fg>  Group success!
",
]
`;

exports[`taskLog (isCI = false) > group > renders error state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<red>■</fg>  Group error!
",
]
`;

exports[`taskLog (isCI = false) > group > renders group error state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<red>■</fg>  Group error!
",
]
`;

exports[`taskLog (isCI = false) > group > renders group success state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<green>◆</fg>  Group success!
",
]
`;

exports[`taskLog (isCI = false) > group > renders success state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<green>◆</fg>  Group success!
",
]
`;

exports[`taskLog (isCI = false) > group > showLog shows all groups in order 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<green>◆</fg>  Group 0 success!
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<green>◆</fg>  Group 0 success!
",
  "<red>■</fg>  Group 1 error!
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  overall error
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>
<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>
<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > can write line by line 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > can write multiple lines 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > destructive ansi codes are stripped 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2 bad ansi!</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2 bad ansi!</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > enforces limit if set 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > prints empty lines 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim></bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim></bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > raw = true appends message text until newline 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0still line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0still line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > raw = true works when mixed with non-raw messages 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0still line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0still line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > message > raw = true works when started with non-raw messages 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1still line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > outputs limited log with limit by default 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = false outputs full log without limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = false outputs limited log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = true outputs full log 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = true outputs full log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > outputs limited log with limit by default 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = false outputs full log without limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = false outputs limited log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = true outputs full log 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = true outputs full log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = false) > success > clears output and renders message 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  success!
",
]
`;

exports[`taskLog (isCI = false) > success > renders output if showLog = true 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<dim>│</fg>  <dim>line 0</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  success!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = false) > writes message header 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
]
`;

exports[`taskLog (isCI = true) > error > clears output if showLog = false 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  some error!
",
]
`;

exports[`taskLog (isCI = true) > error > renders output with message 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  some error!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = true) > group > applies limit per group 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > can render multiple groups of different sizes 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > can render multiple groups of equal size 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > handles empty groups 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
]
`;

exports[`taskLog (isCI = true) > group > renders error state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > renders group error state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > renders group success state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > renders success state 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > showLog shows all groups in order 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  Some log
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  overall error
",
  "<dim>│</fg>  <bold>Group 0</bold>
",
  "<dim>│</fg>
<dim>│</fg>  <dim>Group 0 line 0</bold>
<dim>│</fg>  <dim>Group 0 line 1</bold>
<dim>│</fg>  <dim>Group 0 line 2</bold>
",
  "<dim>│</fg>  <bold>Group 1</bold>
",
  "<dim>│</fg>
<dim>│</fg>  <dim>Group 1 line 0</bold>
<dim>│</fg>  <dim>Group 1 line 1</bold>
<dim>│</fg>  <dim>Group 1 line 2</bold>
<dim>│</fg>  <dim>Group 1 line 3</bold>
<dim>│</fg>  <dim>Group 1 line 4</bold>
",
]
`;

exports[`taskLog (isCI = true) > message > can write line by line 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > can write multiple lines 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
]
`;

exports[`taskLog (isCI = true) > message > destructive ansi codes are stripped 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > enforces limit if set 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > prints empty lines 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > raw = true appends message text until newline 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > raw = true works when mixed with non-raw messages 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > raw = true works when started with non-raw messages 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > outputs limited log with limit by default 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = false outputs full log without limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = false outputs limited log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = true outputs full log 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = true outputs full log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<red>■</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > outputs limited log with limit by default 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = false outputs full log without limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = false outputs limited log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = true outputs full log 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = true outputs full log with limit 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  woo!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
<dim>│</fg>  <dim>line 2</bold>
<dim>│</fg>  <dim>line 3</bold>
",
]
`;

exports[`taskLog (isCI = true) > success > clears output and renders message 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  success!
",
]
`;

exports[`taskLog (isCI = true) > success > renders output if showLog = true 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<dim>│</fg>
<green>◆</fg>  success!
",
  "<dim>│</fg>
<dim>│</fg>  <dim>line 0</bold>
<dim>│</fg>  <dim>line 1</bold>
",
]
`;

exports[`taskLog (isCI = true) > writes message header 1`] = `
[
  "<dim>│</fg>
",
  "<green>◇</fg>  foo
",
  "<dim>│</fg>
",
]
`;
